<resources>
    <string name="app_name">Biblio</string>

    <string name="title_buku">Buku</string>
    <string name="title_pengguna">Pengguna</string>
    <string name="title_profile">Profil</string>

    <string name="books_title">Judul: </string>
    <string name="books_year">Tahun: </string>
    <string name="books_rating">Rating: </string>
    <string name="synopsis">Sinopsis: </string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_test">testActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="choose_image">Choose Image</string>
    <string name="ed_judul">Judul</string>
    <string name="ed_penulis">Penulis</string>
    <string name="ed_penerbit">Penerbit</string>
    <string name="ed_genre">Genre</string>
    <string name="ed_jenis_buku">Jenis Buku</string>
    <string name="ed_tanggal_terbit">Tanggal Terbit</string>
    <string name="ed_tanggal_yyyy_mm_dd">(YYYY-MM-DD)</string>
    <string name="ed_sinopsis">Sinopsis</string>
    <string name="bt_tambah">Tambahkan</string>
    <string name="bt_update">Update</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="bt_login">Login</string>
    <string name="bt_register">Daftar</string>
    <string name="back_to_login">Kembali ke halaman login</string>
    <string name="ed_confirm_password">Ulangi Password</string>
    <string name="don_t_have_an_account_register_here">Daftar disini jika belum punya akun</string>
    <string name="bt_add_book">Add Book</string>
    <string name="bt_add_user">Add User</string>
    <string name="tv_role">Role</string>
    <string name="tv_nama">Nama</string>
    <string name="tv_email">Email</string>
    <string name="ed_nama">Nama</string>
    <string name="ed_email">Email</string>
    <string name="ed_no_hp">No.HP</string>
    <string name="ed_jenis_kelamin">Jenis Kelamin</string>
    <string name="ed_alamat">Alamat</string>
    <string name="ed_role">Role</string>
    <string name="ed_password">Password</string>
    <string name="user_name">Nama:</string>
    <string name="user_email">Email:</string>
    <string name="user_no_hp">No.HP:</string>
    <string name="user_gender">Gender:</string>
    <string name="user_alamat">Alamat:</string>
    <string name="user_tanggal_gabung">Tanggal Gabung:</string>
    <string name="user_selesai">Selesai:</string>
    <string name="user_rencana_dibaca">Rencana Dibaca:</string>
    <string name="user_sedang_dibaca">Sedang Dibaca:</string>
    <string name="user_dijatuhkan">Dijatuhkan:</string>
    <string name="user_skor_mean">Skor Mean:</string>
    <string name="title_activity_main_user">MainUserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_list">My List</string>
    <string name="title_search">Search</string>
    <string name="books_rank">Peringkat:</string>
    <string name="status_baca_selesai">Selesai</string>
    <string name="status_baca_rencana_dibaca">Rencana Dibaca</string>
    <string name="status_baca_sedang_dibaca">Sedang Dibaca</string>
    <string name="status_baca_dijatuhkan">Dijatuhkan</string>
    <string name="label_skor">Skor</string>
    <string name="skor_null">-</string>
    <string name="skor_10">10</string>
    <string name="skor_9">9</string>
    <string name="skor_8">8</string>
    <string name="skor_7">7</string>
    <string name="skor_6">6</string>
    <string name="skor_5">5</string>
    <string name="skor_4">4</string>
    <string name="skor_3">3</string>
    <string name="skor_2">2</string>
    <string name="skor_1">1</string>
    <string name="label_review">Review</string>
    <string name="label_tanggal">Tanggal</string>
    <string name="simpan">Simpan</string>
    <string name="hapus">Hapus</string>
    <string name="label_status">Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorit">Favorit</string>
    <string name="ranking">Rangking</string>
    <string name="popularitas">Popularitas</string>
    <string name="admin">Admin</string>
    <string name="pengguna">Pengguna</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="role">Role</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="tanggal_selesai">Tanggal Selesai</string>
    <string name="edit">Edit</string>
    <string name="tambahkan_ke_list">Tambahkan ke List</string>
    <string name="update_list">Update List</string>
    <string name="logout">Logout</string>
</resources>