<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AddUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/chooseImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/choose_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/baseline_add_photo_alternate_24" />

        <EditText
            android:id="@+id/etNama"
            android:layout_width="347dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:hint="@string/ed_nama"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseImageView" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="347dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:hint="@string/ed_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNama" />

        <EditText
            android:id="@+id/etNoHP"
            android:layout_width="347dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:hint="@string/ed_no_hp"
            android:inputType="phone"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <EditText
            android:id="@+id/etJenisKelamin"
            android:layout_width="347dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:hint="@string/ed_jenis_kelamin"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNoHP" />

        <EditText
            android:id="@+id/etAlamat"
            android:layout_width="347dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:hint="@string/ed_alamat"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etJenisKelamin" />

        <EditText
            android:id="@+id/etRole"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/ed_role"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAlamat" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/ed_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRole" />

        <Button
            android:id="@+id/btAddUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/bt_tambah"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>